# enygmah

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .releaserc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  config.yml
.github/ISSUE_TEMPLATE/: 0_installation.yml  1_bug.yml  2_feature_request.yml  3_security.yml  4_performance.yml  config.yml
.github/workflows/: release.yml  sponsors.yml
.hooks/: pre-commit
docker/: Dockerfile  Makefile  build.sh  join-results.sh
src/: base-command.ts  main.rs
src/commands/: analyze.ts  fix.ts  init.ts
src/flags/: debug.ts
src/helpers/: analysis_type.rs  docker.rs  enygmah_docker.rs  install_tools.rs  logger.rs  mod.rs  scan.rs  sonarqube.rs  tools.rs
src/hooks/: jit-plugin-not-installed.ts
src/subcommands/: mod.rs
src/subcommands/scan/: analyze.rs  mod.rs
src/subcommands/scan/assets/: docker_image.rs  mod.rs  undetected.rs
src/subcommands/scan/hooks/: mod.rs  post_scan.rs  pre_scan.rs
src/subcommands/scan/scan_types/: binary.rs  docker_image.rs  local_repo.rs  remote_repo.rs  undetected.rs  web_application.rs
test/: tsconfig.json
