[package]
name = "enygmah"
version = "0.1.1"
edition = "2021"
description = "Automate vulnerability analysis within several tools"
homepage = "https://github.com/hotaydev/enygmah"
repository = "https://github.com/hotaydev/enygmah"
documentation = "https://github.com/hotaydev/enygmah"
license = "AGPL-3.0"
readme = "README.md"
keywords = ["security", "vulnerability", "analysis"]
publish = false

[dependencies]
bollard = "0.18.1"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
indicatif = "0.17.9"
log = "0.4.25"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
url = "2.5.4"
